--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,57 @@
-version: "3"
+# Docker compose version https://docs.docker.com/compose/compose-file
+version: "3.8"
+
+# Define SonarQube and PostgreSQL services.
 services:
   sonarqube:
-    image: sonarqube:community
-    hostname: sonarqube
+    image: sonarqube:latest
     container_name: sonarqube
     depends_on:
-      - db
+      - sonarqube-db
     environment:
-      SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
-      SONAR_JDBC_USERNAME: sonar
+      SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: "true"
+      SONAR_JDBC_URL: jdbc:postgresql://sonarqube-db:5432/sonarqube
+      SONAR_JDBC_USERNAME: sonarqubeUser
       SONAR_JDBC_PASSWORD: sonar
+    networks:
+      - sonarqube
     volumes:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
       - sonarqube_logs:/opt/sonarqube/logs
+      - sonarqube_temp:/opt/sonarqube/temp
     ports:
-      - "9000:9000"
-  db:
-    image: postgres:12
-    hostname: postgresql
-    container_name: postgresql
+      - 9000:9000
+  sonarqube-db:
+    image: postgres:latest
+    container_name: sonarqube-db
     environment:
-      POSTGRES_USER: sonar
+      POSTGRES_DB: sonarqube
+      POSTGRES_USER: sonarqubeUser
       POSTGRES_PASSWORD: sonar
-      POSTGRES_DB: sonar
+    networks:
+      - sonarqube
     volumes:
       - postgresql:/var/lib/postgresql
       - postgresql_data:/var/lib/postgresql/data
 
+# Define network for SonarQube, PostgreSQL and SonnarScanner containers.
+networks:
+  sonarqube:
+    name: sonarqube-network
+    driver: bridge
+
+# Define volumes for containers.
 volumes:
   sonarqube_data:
+    name: sonarqube_data
   sonarqube_extensions:
+    name: sonarqube_extensions
   sonarqube_logs:
+    name: sonarqube_logs
+  sonarqube_temp:
+    name: sonarqube_temp
   postgresql:
+    name: postgresql
   postgresql_data:
+    name: postgresql_data
